# web-api-captcha

./: .gitignore  CHANGELOG.md  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: PERFORMANCE_SECURITY_PROPOSAL.md
tests/: test_captcha_adaptive.py  test_captcha_api.py  test_captcha_beacon.py  test_captcha_checks.py  test_captcha_fallback_provider.py  test_captcha_gate.py  test_captcha_new_providers.py  test_captcha_pageguard.py  test_captcha_presets.py  test_captcha_providers.py  test_captcha_receipts.py  test_captcha_redis_store.py  test_captcha_rendering.py  test_captcha_replay_guard.py  test_captcha_reputation.py  test_captcha_risk.py  test_captcha_scoring.py  test_captcha_shared.py  test_captcha_signals.py  test_captcha_stores.py  test_captcha_third_party.py  test_captcha_tiered.py  test_captcha_widget.py
webapi_captcha/: __init__.py  _shared.py  adaptive.py  api.py  base.py  beacon.js  beacon.py  checks.py  events.py  gate.py  memory.py  models.py  pageguard.py  presets.py  ratelimit.py  receipts.py  redis_store.py  rendering.py  replay_guard.py  reputation.py  risk.py  scoring.py  signals.py  sql.py  tiered.py  transport.py  widget.js  widget.py
webapi_captcha/providers/: __init__.py  _http.py  fallback.py  hcaptcha.py  math_captcha.py  path_trace.py  proof_of_work.py  recaptcha.py  text_captcha.py  turnstile.py
